...
                                <connections>
                                    <segue destination="EvS-z8-yRI" kind="show" id="ONS-TZ-DYN"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Vx-Vd-n1f">
                                <rect key="frame" x="6" y="491" width="48" height="30"/>
                                <state key="normal" title="Scores"/>
                                <connections>
                                    <segue destination="H2Q-CO-Q2P" kind="show" id="iOg-GD-YYH"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bMd-kN-Oow">
                                <rect key="frame" x="6" y="529" width="47" height="30"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <view key="tableFooterView" hidden="YES" contentMode="scaleToFill" id="ZcB-VF-uwo">
                            <rect key="frame" x="0.0" y="141.5" width="375" height="116"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Scores For This Meet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fzj-M5-9di">
                                    <rect key="frame" x="93" y="8" width="189" height="21"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jWB-SY-3Q7">
                                    <rect key="frame" x="129" y="43" width="117" height="30"/>
                                    <state key="normal" title="New  Scoresheet"/>
                                    <connections>
                                        <action selector="newScoreSheetTapped:" destination="H2Q-CO-Q2P" eventType="touchUpInside" id="BC8-1B-prQ"/>
                                    </connections>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nsj-oW-daa">
                                    <rect key="frame" x="161" y="72" width="53" height="30"/>
...
